Fix Alignment issue

--- a/static/styles.css
+++ b/static/styles.css
@@ -47,6 +47,7 @@ h1 {
     align-items: center;
     position: absolute;
     top: 310px;
+    z-index: 900;
 }
 
 .logo {
@@ -79,6 +80,7 @@ h1 {
     background: #4caf50;
     transition: width 0.1s;
     position: absolute;
+    z-index: 900;
 }
 
 .device {
@@ -92,6 +94,7 @@ h1 {
     text-align: center; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
     transition: transform 0.2s, background-color 0.2s; 
+    z-index: 900;
 }
 
 .device:hover {
@@ -297,5 +300,6 @@ h1 {
   z-index: -1;
   text-align: center;
   margin-top: 10px;
+  z-index: 900;
 
 }
